[gd_scene load_steps=2 format=3 uid="uid://cj8tqg3dud440"]

[ext_resource type="Script" path="res://Scenes/UI/TileDataUi/CategoryList/CategoryList.gd" id="1_8ooef"]

[node name="CategoryList" type="MarginContainer"]
script = ExtResource("1_8ooef")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.439216, 0.439216, 0.439216, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.509804)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ItemNameLabel" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Item Name"
horizontal_alignment = 1

[node name="ShowButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Show data"

[node name="list" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/ShowButton" to="." method="_on_show_button_pressed"]
